force-app/main/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ACV_2__c</fullName>
        <label>ACV 2(Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV_3__c</fullName>
        <label>ACV 3(Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Account.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <description>New custom field for Activated Date which will be hidden on Page layouts</description>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activation_Offset__c</fullName>
        <label>Activation Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Standard MA</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard MA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <label>ACV1(Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU_From_Account__c</fullName>
        <description>BU from Account</description>
        <formula>TEXT(Account.BU__c)</formula>
        <inlineHelpText>BU is determined by the BU attached to the Account. If incorrect check that you have selected the correct Account Number for this client</inlineHelpText>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact(Legacy)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Billing Contact)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Elsewhere__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booked Elsewhere(Legacy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Date_2__c</fullName>
        <label>Booking Date 2(Legacy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Date_3__c</fullName>
        <label>Booking Date 3(Legacy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Date_EST__c</fullName>
        <label>Booking Date(Legacy)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Date_New__c</fullName>
        <label>Booking Date 1(Legacy)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>SHL Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSVCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CSVCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Display__c</fullName>
        <label>Client Display</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detailed Pricing</fullName>
                </value>
                <value>
                    <fullName>Summary Pricing</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non Cancellable</fullName>
                    <default>true</default>
                    <label>Non Cancellable</label>
                </value>
                <value>
                    <fullName>Cancellable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Custom field to capture end date of contract and can be edited by user manually.</description>
        <inlineHelpText>Automatically populated on OAT review and activation – calculated using Product Subscription Start Date plus Duration (from Opportunity) / MSA expiry date.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Order Type(Legacy)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>Assessment 1:1</fullName>
                </value>
                <value>
                    <fullName>Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>Enterprise Leadership Solution</fullName>
                </value>
                <value>
                    <fullName>Sales Challenger</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Development Centre</fullName>
                </value>
                <value>
                    <fullName>HiPo Solution</fullName>
                </value>
                <value>
                    <fullName>Leadership Academy</fullName>
                </value>
                <value>
                    <fullName>Licence Fees</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Multi - enter types in Description</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Product</fullName>
                </value>
                <value>
                    <fullName>Pencil &amp; Paper, Books</fullName>
                </value>
                <value>
                    <fullName>Precise Fit</fullName>
                </value>
                <value>
                    <fullName>Royalties</fullName>
                </value>
                <value>
                    <fullName>S2P - Capped Subscription</fullName>
                </value>
                <value>
                    <fullName>S2P - In Advance</fullName>
                </value>
                <value>
                    <fullName>S2P - In Arrears</fullName>
                </value>
                <value>
                    <fullName>S2P - Uncapped Subscription</fullName>
                </value>
                <value>
                    <fullName>Site SetUp</fullName>
                </value>
                <value>
                    <fullName>SODA - Capped Subscription</fullName>
                </value>
                <value>
                    <fullName>SODA - In Advance</fullName>
                </value>
                <value>
                    <fullName>SODA - In Arrears</fullName>
                </value>
                <value>
                    <fullName>SODA - Uncapped Subscription</fullName>
                </value>
                <value>
                    <fullName>Sunstone Analytics</fullName>
                </value>
                <value>
                    <fullName>Talent Audit</fullName>
                </value>
                <value>
                    <fullName>TC - Capped Subscription</fullName>
                </value>
                <value>
                    <fullName>TC - In Advance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Cancelled_Reason__c</fullName>
        <label>Customer Cancelled Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <formula>Account.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daylight_End_Date_US_Submission__c</fullName>
        <formula>DATETIMEVALUE(DATE(YEAR(DATEvalue(Final_Submission_Date_EST__c)),11,1) 
+ 
( 7 
- 
CASE( MOD(DATE ( YEAR (DATEvalue(Final_Submission_Date_EST__c)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEvalue(Final_Submission_Date_EST__c)),11,1) - DATE (1900,1,7),7)) 
)) + 6/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daylight End Date US(submission)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Daylight_Start_Date_US_Submission__c</fullName>
        <formula>DATETIMEVALUE(DATE(YEAR(DATEvalue(Final_Submission_Date_EST__c)),3,1)
+
( 14
-
CASE( MOD(DATE ( YEAR (DATEvalue(Final_Submission_Date_EST__c)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEvalue(Final_Submission_Date_EST__c)),3,1) - DATE (1900,1,7),7))
)) + 7/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daylight Start Date US(Submission)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_remaining_from_annual_subscription__c</fullName>
        <label>Days remaining from annual sub(Legacy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date_Plus_Leap_Year__c</fullName>
        <label>Earliest StartDate Plus LeapYear(Legacy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date(Legacy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Submission_Date_EST__c</fullName>
        <label>Submitted to OATs(Legacy)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoicing_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Contact(Legacy)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Invoicing Contact)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Possible_Submission_Date_Daylight__c</fullName>
        <description>Calculates Final submission date with adding daylight saving value and used in calculating Last possible submission date field.</description>
        <label>Last Possible Submission Date Daylight</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Possible_Submission_Date__c</fullName>
        <formula>DATETIMEVALUE(CASE(MOD(DATE( 
YEAR(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
MONTH(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
CASE( MONTH(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
2, IF( MOD( YEAR(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 4) = 0, 29, 28), 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 
) 
)- DATE(2013, 1, 6),7),0,DATE( 
YEAR(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
MONTH(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
CASE( MONTH(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
2, IF(MOD(YEAR(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 4) = 0, 27, 26), 
4, 28, 
6, 28, 
9, 28, 
11, 28, 
29 
) 
),6,DATE( 
YEAR(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
MONTH(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
CASE( MONTH(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
2, IF( MOD( YEAR(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 4) = 0, 28, 27), 
4, 29, 
6, 29, 
9, 29, 
11, 29, 
30 
) 
),DATE( 
YEAR(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
MONTH(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
CASE( MONTH(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 
2, IF( MOD( YEAR(DATEVALUE(Last_Possible_Submission_Date_Daylight__c)), 4) = 0, 29, 28), 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 
))))+ ((23 -(Submission_Offset__c/3600000))/24) + (59/1440)</formula>
        <label>Last Possible Submission Date(Legacy)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Order_Name__c</fullName>
        <label>Legal Order Name(Legacy)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Year_Increase_Clause__c</fullName>
        <label>Multi-Year Price Increase Clause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price Increase Clause</fullName>
                </value>
                <value>
                    <fullName>Non-standard Price Increase Clause</fullName>
                </value>
                <value>
                    <fullName>Delete Price Increase Clause</fullName>
                </value>
                <value>
                    <fullName>Old Standard Inflationary Increase</fullName>
                </value>
                <value>
                    <fullName>Delete Inflationary Increase Clause</fullName>
                    <isActive>false</isActive>
                    <label>Delete Inflationary Increase Clause</label>
                </value>
                <value>
                    <fullName>Delete Standard Inflationary Increase</fullName>
                    <isActive>false</isActive>
                    <label>Delete Standard Inflationary Increase</label>
                </value>
                <value>
                    <fullName>Non-standard Increase Clause</fullName>
                    <isActive>false</isActive>
                    <label>Non-standard Increase Clause</label>
                </value>
                <value>
                    <fullName>Standard Inflationary Increase</fullName>
                    <isActive>false</isActive>
                    <label>Standard Inflationary Increase</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NVM_Credit_Card_ID__c</fullName>
        <label>NVM Payment ID(Legacy)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <formula>BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>This is a backend field</description>
        <label>First Year Opportunity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity(Legacy)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Variation Contracts</relationshipLabel>
        <relationshipName>Variation_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Order(Legacy)</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Variation Orders</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDFCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PDFCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 days</fullName>
                </value>
                <value>
                    <fullName>30 days</fullName>
                    <default>true</default>
                    <label>30 days</label>
                </value>
                <value>
                    <fullName>45 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>120 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Billing_Frequency__c</fullName>
        <label>Product Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                    <default>true</default>
                    <label>Annual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reboost_Opp_Error__c</fullName>
        <label>Reboost Opp Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reboost_Opportunity__c</fullName>
        <label>Reboost Opportunity(Legacy)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_System_type__c</fullName>
        <label>Related System type(Legacy)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy Soda</fullName>
                </value>
                <value>
                    <fullName>Legacy S2P</fullName>
                </value>
                <value>
                    <fullName>Legacy Other</fullName>
                </value>
                <value>
                    <fullName>TalentCentral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp_Error__c</fullName>
        <description>Field is created to capture the error message which comes from back end Renewal Opp creation process.</description>
        <label>Renewal Opp Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <description>Link  to Renewal Opportunity  for this order.</description>
        <label>Renewal Opportunity(Legacy)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Run_Order_Creation_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Order Creation Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_total_of_non_subscription_amount__c</fullName>
        <label>Running total of non-sub amount(Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Running_total_of_subscription_amount__c</fullName>
        <label>Running total of sub amt(Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Running_total_of_subscription_days__c</fullName>
        <label>Running total of sub days(Legacy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S2P_Reference_Required__c</fullName>
        <description>Check on the S2P Reference.</description>
        <inlineHelpText>Choose new if system referenced in the order does not currently exist, otherwise choose Existing</inlineHelpText>
        <label>System Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_billing_frequency__c</fullName>
        <label>Service billing frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25% up front, 50% on milestones, 25% on completion</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                    <default>true</default>
                    <label>100% Upfront</label>
                </value>
                <value>
                    <fullName>Invoice per milestone</fullName>
                </value>
                <value>
                    <fullName>Upon completion</fullName>
                </value>
                <value>
                    <fullName>Special Invoicing Instructions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Offset__c</fullName>
        <label>Submission Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <inlineHelpText>This date should be the same as the Contract Start Date unless delay has been approved in CLM.</inlineHelpText>
        <label>Product Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Client_ID__c</fullName>
        <label>System Client ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Contract Value(Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unconfirmed_Sun_Order_Number__c</fullName>
        <label>Unconfirmed Sun Order Number(Legacy)</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variation_Order__c</fullName>
        <formula>text(Opportunity__r.Variation_Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variation Opportunity(Legacy)</label>
        <type>Text</type>
    </fields>
</CustomObject>